13_K8s_Troubleshooting/02-common-issues/manifests/dns-test-pod-fixed.yaml
# Fixed: registry.k8s.io/e2e-test-images/dnsutils has no tags at all; the image
# used in the Kubernetes DNS-debugging docs is e2e-test-images/jessie-dnsutils:1.3

apiVersion: v1
kind: Pod

metadata:
  name: dns-test

spec:
  containers:
    - name: dns-test
      image: registry.k8s.io/e2e-test-images/jessie-dnsutils:1.3
      command:
        - sleep
        - "3600"
